--- a/src/FocusWatch/FocusWatch.Content/Themes/Views/MainWindow.xaml
+++ b/src/FocusWatch/FocusWatch.Content/Themes/Views/MainWindow.xaml
@@ -10,7 +10,7 @@
                     <Border Background="{TemplateBinding Background}"
                             BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="{TemplateBinding BorderThickness}">
-                        <ContentPresenter/>
+                        <views:WatchContent/>
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
