--- a/src/FocusWatch/FocusWatch.Content/Themes/Views/WatchContent.xaml
+++ b/src/FocusWatch/FocusWatch.Content/Themes/Views/WatchContent.xaml
@@ -1,15 +1,195 @@
-<ResourceDictionary
+﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:views="clr-namespace:FocusWatch.Content.UI.Views">
 
+
+    <Style TargetType="Button">
+        <Setter Property="Margin" Value="5"/>
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="BorderBrush" Value="Transparent"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border Background="{TemplateBinding Background}">
+                        <ContentPresenter HorizontalAlignment="Center" 
+                                          VerticalAlignment="Center"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Cursor" Value="Hand"/>
+                <Setter Property="Background" Value="#666666"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+    <Style TargetType="TextBlock" x:Key="timeStyle">
+        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="FontSize" Value="30"/>
+    </Style>
+
+    <Style TargetType="TextBlock" x:Key="labelStyle">
+        <Setter Property="Foreground" Value="DarkGray"/>
+        <Setter Property="FontSize" Value="11"/>
+        <Setter Property="TextAlignment" Value="Right"/>
+        <Setter Property="Padding" Value="0 0 3 0"/>
+    </Style>
+
+
+    <Style x:Key="toggleStyle" TargetType="ToggleButton" BasedOn="{x:Null}">
+        <Setter Property="Margin" Value="0 5"/>
+        <Setter Property="BorderBrush" Value="Transparent"/>
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="ToggleButton">
+                    <Grid x:Name="GD" Background="{TemplateBinding Background}">
+                        <Image Source="/Images/pin.png" Name="pin" Visibility="Collapsed"/>
+                        <Image Source="/Images/unpin.png" Name="unpin"/>
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Cursor" Value="Hand"/>
+                            <Setter Property="Background" Value="#666666"/>
+                        </Trigger>
+
+                        <Trigger Property="IsChecked" Value="True">
+                            <Setter TargetName="pin" Property="Visibility" Value="Visible"/>
+                            <Setter TargetName="unpin" Property="Visibility" Value="Collapsed"/>
+                        </Trigger>
+                        <Trigger Property="IsChecked" Value="False">
+                            <Setter TargetName="pin" Property="Visibility" Value="Collapsed"/>
+                            <Setter TargetName="unpin" Property="Visibility" Value="Visible"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
     <Style TargetType="{x:Type views:WatchContent}">
+        <Setter Property="Background" Value="#333333"/>
+        <Setter Property="BorderBrush" Value="Orange"/>
+        <Setter Property="BorderThickness" Value="0.5"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type views:WatchContent}">
-                    <Border Background="{TemplateBinding Background}"
+                    <Border x:Name="PART_Border"
+                            Background="{TemplateBinding Background}"
                             BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="{TemplateBinding BorderThickness}">
+                        <Border>
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="auto"/>
+                                    <RowDefinition/>
+                                    <RowDefinition Height="auto"/>
+                                </Grid.RowDefinitions>
+
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition/>
+                                        <ColumnDefinition Width="auto"/>
+                                    </Grid.ColumnDefinitions>
+
+                                    <StackPanel>
+                                        <TextBlock Text="집중력 시간 측정기"
+                                                   VerticalAlignment="Center" 
+                                                   Foreground="DarkGray"
+                                                   Margin="5"/>
+                                    </StackPanel>
+
+                                    <StackPanel Grid.Column="1" Orientation="Horizontal">
+                                        <ToggleButton IsChecked="{Binding TopMost, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" 
+                                                      Style="{StaticResource toggleStyle}" 
+                                                      ToolTip="항상위에"/>
+                                        <Button Command="{Binding CloseCommand}" 
+                                                CommandParameter="close" 
+                                                ToolTip="프로그램 닫기">
+                                            <Image Source="/Images/close.png" 
+                                                   Width="17" 
+                                                   Height="17"/>
+                                        </Button>
+                                    </StackPanel>
+                                </Grid>
+
+                                <Grid Grid.Row="1" 
+                                      HorizontalAlignment="Center" 
+                                      VerticalAlignment="Center">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition/>
+                                        <RowDefinition Height="auto"/>
+                                    </Grid.RowDefinitions>
+
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition />
+                                        <ColumnDefinition />
+                                        <ColumnDefinition />
+                                        <ColumnDefinition />
+                                        <ColumnDefinition />
+                                        <ColumnDefinition />
+                                        <ColumnDefinition Width="auto"/>
+                                        <ColumnDefinition />
+                                    </Grid.ColumnDefinitions>
+
+                                    <!--<TextBlock Grid.ColumnSpan="10" Text="{Binding TimeText}" Style="{StaticResource timeStyle}" Margin="5 0"/>-->
+
+                                    <TextBlock Grid.Column="0" 
+                                               Style="{StaticResource timeStyle}"
+                                               Text="{Binding Hour}"/>
+                                    <TextBlock Grid.Column="1" 
+                                               Style="{StaticResource timeStyle}"
+                                               Margin="5 0"
+                                               Text=":"/>
+                                    <TextBlock Grid.Column="2" 
+                                               Style="{StaticResource timeStyle}"
+                                               Text="{Binding Minute}"/>
+                                    <TextBlock Grid.Column="3" Style="{StaticResource timeStyle}"  
+                                               Margin="5 0"
+                                               Text=":"/>
+                                    <TextBlock Grid.Column="4" 
+                                               Style="{StaticResource timeStyle}"
+                                               Text="{Binding Second}"/>
+                                    <TextBlock Grid.Column="5" 
+                                               Style="{StaticResource timeStyle}"  
+                                               Margin="2 0"
+                                               Text="."/>
+                                    <TextBlock Grid.Column="6" 
+                                               Style="{StaticResource timeStyle}" 
+                                               Text="{Binding Millisecond}" 
+                                               VerticalAlignment="Bottom"
+                                               FontSize="25" />
+
+                                    <TextBlock Grid.Row="1" Grid.Column="0" 
+                                               Style="{StaticResource labelStyle}"
+                                               Text="시간"/>
+                                    <TextBlock Grid.Row="1" Grid.Column="2" 
+                                               Style="{StaticResource labelStyle}"
+                                               Text="분"/>
+                                    <TextBlock Grid.Row="1" Grid.Column="4" 
+                                               Style="{StaticResource labelStyle}"
+                                               Text="초"/>
+                                </Grid>
+
+                                <StackPanel Grid.Row="2" Orientation="Horizontal"  HorizontalAlignment="Center">
+                                    <Button Command="{Binding StartCommand}" IsEnabled="{Binding IsEnableStart}">
+                                        <Image Source="/Images/start.png" Width="20" Height="20"/>
+                                    </Button>
+                                    <Button Command="{Binding StopCommand}" IsEnabled="{Binding IsEnableStop}">
+                                        <Image Source="/Images/pause.png" Width="20" Height="20"/>
+                                    </Button>
+                                    <Button Command="{Binding ResetCommand}">
+                                        <Image Source="/Images/restart.png" Width="20" Height="20"/>
+                                    </Button>
+                                </StackPanel>
+                            </Grid>
+                        </Border>
+
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
