--- a/src/FocusWatch/FocusWatch.Content/Themes/Generic.xaml
+++ b/src/FocusWatch/FocusWatch.Content/Themes/Generic.xaml
@@ -3,6 +3,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:views="clr-namespace:FocusWatch.Content.UI.Views">
     <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="/FocusWatch.Content;component/Themes/Units/BasicButton.xaml"/>
         <ResourceDictionary Source="/FocusWatch.Content;component/Themes/Views/WatchContent.xaml"/>
         <ResourceDictionary Source="/FocusWatch.Content;component/Themes/Views/MainWindow.xaml"/>
     </ResourceDictionary.MergedDictionaries>
