--- a/src/FocusWatch/FocusWatch.Content/Themes/Views/WatchContent.xaml
+++ b/src/FocusWatch/FocusWatch.Content/Themes/Views/WatchContent.xaml
@@ -1,31 +1,9 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:views="clr-namespace:FocusWatch.Content.UI.Views">
+    xmlns:views="clr-namespace:FocusWatch.Content.UI.Views"
+    xmlns:units="clr-namespace:FocusWatch.Content.UI.Units">
 
-
-    <Style TargetType="Button">
-        <Setter Property="Margin" Value="5"/>
-        <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="BorderBrush" Value="Transparent"/>
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type Button}">
-                    <Border Background="{TemplateBinding Background}">
-                        <ContentPresenter HorizontalAlignment="Center" 
-                                          VerticalAlignment="Center"/>
-                    </Border>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-
-        <Style.Triggers>
-            <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Cursor" Value="Hand"/>
-                <Setter Property="Background" Value="#666666"/>
-            </Trigger>
-        </Style.Triggers>
-    </Style>
 
     <Style TargetType="TextBlock" x:Key="timeStyle">
         <Setter Property="Foreground" Value="White"/>
@@ -177,15 +155,27 @@
                                 </Grid>
 
                                 <StackPanel Grid.Row="2" Orientation="Horizontal"  HorizontalAlignment="Center">
-                                    <Button Command="{Binding StartCommand}" IsEnabled="{Binding IsEnableStart}">
-                                        <Image Source="/Images/start.png" Width="20" Height="20"/>
-                                    </Button>
-                                    <Button Command="{Binding StopCommand}" IsEnabled="{Binding IsEnableStop}">
-                                        <Image Source="/Images/pause.png" Width="20" Height="20"/>
-                                    </Button>
-                                    <Button Command="{Binding ResetCommand}">
-                                        <Image Source="/Images/restart.png" Width="20" Height="20"/>
-                                    </Button>
+                                    <units:BasicButton Command="{Binding StartCommand}">
+                                        <Viewbox Width="48" Height="48">
+                                            <Canvas Width="24" Height="24">
+                                                <Path Fill="#FFCEAD4F" Data="M8,5.14V19.14L19,12.14L8,5.14Z" />
+                                            </Canvas>
+                                        </Viewbox>
+                                    </units:BasicButton>
+                                    <units:BasicButton Command="{Binding StopCommand}">
+                                        <Viewbox Width="48" Height="48">
+                                            <Canvas Width="24" Height="24">
+                                                <Path Fill="#FFCEAD4F" Data="M18,18H6V6H18V18Z" />
+                                            </Canvas>
+                                        </Viewbox>
+                                    </units:BasicButton>
+                                    <units:BasicButton Command="{Binding ResetCommand}">
+                                        <Viewbox Width="48" Height="48">
+                                            <Canvas Width="24" Height="24">
+                                                <Path Fill="#FFCEAD4F" Data="M12,4C14.1,4 16.1,4.8 17.6,6.3C20.7,9.4 20.7,14.5 17.6,17.6C15.8,19.5 13.3,20.2 10.9,19.9L11.4,17.9C13.1,18.1 14.9,17.5 16.2,16.2C18.5,13.9 18.5,10.1 16.2,7.7C15.1,6.6 13.5,6 12,6V10.6L7,5.6L12,0.6V4M6.3,17.6C3.7,15 3.3,11 5.1,7.9L6.6,9.4C5.5,11.6 5.9,14.4 7.8,16.2C8.3,16.7 8.9,17.1 9.6,17.4L9,19.4C8,19 7.1,18.4 6.3,17.6Z" />
+                                            </Canvas>
+                                        </Viewbox>
+                                    </units:BasicButton>
                                 </StackPanel>
                             </Grid>
                         </Border>
